--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,6 @@
 @import "styles/fonts";
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-body {
-  font-family: Helvetica Neue, sans-serif;
-  color: #5A5A5A;
-}
-
 .form-control {
   font-weight: 300;
 }
@@ -19,17 +14,22 @@ body {
 // App Styles
 
 .App {
-
-  &-header {
-    font-family: Avenir-Book, sans-serif;
-    background: linear-gradient(135deg, #f7635f 0%, #fa6388 28%, #f74561 28%, #f81d72 92%, #f3187e 92%, #f3187e 100%);
-    height: 80px;
-    border-radius: 60px;
-    padding: 0 64px;
-    color: #fff;
-    overflow: hidden;
-    margin: 60px 0 0;
+  &-main {
+    padding: 64px 50px;
   }
+}
+
+// Header component
+
+.Header {
+  font-family: Avenir-Book, sans-serif;
+  background: linear-gradient(135deg, #f7635f 0%, #fa6388 28%, #f74561 28%, #f81d72 92%, #f3187e 92%, #f3187e 100%);
+  height: 80px;
+  border-radius: 60px;
+  padding: 0 64px;
+  color: #fff;
+  overflow: hidden;
+  margin: 60px 0 0;
 
   &-logo {
     height: 45px;
@@ -37,17 +37,12 @@ body {
     margin: 18px 0;
     float: left;
   }
-
   &-title {
     font-size: 1.9rem;
     height: 45px;
     line-height: 45px;
     margin: 22px 0 18px 26px;
     float: left;
-  }
-
-  &-main {
-    padding: 64px 50px;
   }
 }
 
@@ -92,287 +87,302 @@ body {
     }
   }
 
-  // Order Steps
+  .step {
+    display: none;
 
-  .StepOne {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 40px 0 0 0;
-    text-align: center;
-  }
-
-  .StepTwo {
-
-    .table {
-      td {
-        border-color: #656565;
-        vertical-align: bottom;
-        text-align: center;
-        padding-top: 0;
-        padding-bottom: 0;
-      }
-      height: 320px;
-    }
-
-    h2 {
-      font-size: 1.65rem;
-      font-weight: 300;
-      margin-top: 1.5rem;
-    }
-
-    input {
-      margin: 0 0 0 -0.25rem;
-    }
-
-    label {
+    &.show {
       display: block;
     }
 
-    .form-group {
-      margin: 0;
-    }
-
-    .custom-radio {
-      padding: 0;
-    }
-
-    .product-box {
-      border: 2px solid #aaa;
-      width: 100%;
-      margin: 0 auto 0.6rem;
-    }
-    .product-name {
-      font-size: 14px;
-      margin: 0 0 0.7rem;
-    }
-    .product-desc {
-      font-size: 0.66rem;
-      line-height: 0.66rem;
-      color: #A2A2A2;
-      margin: 0 0 1rem;
-      white-space: nowrap;
-    }
-
-    &-product {
+    &-1 {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 40px 0 0 0;
       text-align: center;
-      line-height: 100%;
-      &-s {
-        width: 20%;
-        .product-box {
-          //max-width: 59px;
-          height: 42px;
+    }
+
+    &-2 {
+      .table {
+        td {
+          border-color: #656565;
+          vertical-align: bottom;
+          text-align: center;
+          padding-top: 0;
+          padding-bottom: 0;
         }
-      }
-      &-m {
-        width: 30%;
-        .product-box {
-          //max-width: 84px;
-          height: 59px;
-        }
-      }
-      &-l {
-        width: 50%;
-        .product-box {
-          //max-width: 169px;
-          height: 84px;
-        }
+        height: 320px;
       }
 
-      &-a5 {
-        width: 25%;
-        .product-box {
-          max-width: 68px;
-          height: 97px;
-        }
+      h2 {
+        font-size: 1.65rem;
+        font-weight: 300;
+        margin-top: 1.5rem;
       }
 
-      &-a4 {
-        width: 35%;
-        .product-box {
-          max-width: 97px;
-          height: 138px;
-        }
+      input {
+        margin: 0 0 0 -0.25rem;
       }
 
-      &-a3 {
-        width: 40%;
-        .product-box {
-          max-width: 138px;
-          height: 196px;
-        }
-      }
-
-      .custom-control-indicator {
-        background: #F8F8F8;
-        //border: 2px solid #868686;
-        box-shadow: 0 0 0 1px #fff, 0 0 0 3px #868686;
-      }
-
-      .was-validated .custom-control-input:invalid ~ .custom-control-indicator, .custom-control-input.is-invalid ~ .custom-control-indicator {
-        background-color: rgba(220, 53, 69, 0.25);
-        box-shadow: 0 0 0 1px #fff, 0 0 0 3px $red;
+      label {
+        display: block;
       }
 
       .form-group {
-        &.checked {
-          .product-box {
-            background: #CDF0C2;
-          }
-          input {
-            border-color: #CDF0C2;
-          }
-          .custom-control-indicator {
-            background: #CDF0C2;
-            box-shadow: 0 0 0 1px #fff, 0 0 0 3px #868686;
-          }
-        }
+        margin: 0;
       }
 
-    }
-  }
+      .custom-radio {
+        padding: 0;
+      }
 
-  .StepThree {
-    .item {
-      margin: 0 0 24px;
-      &-title {
-        margin: 0 0 7px;
-        font-weight: 500;
-        font-size: 1.1rem;
-      }
-      &-select-file {
-        .btn {
-          margin: 0 1rem 0 0;
-        }
-      }
-      &-file {
-        font-weight: 300;
-        .btn {
-          margin: 0 0 0 30px;
-          color: $blue;
-        }
-      }
-    }
-    &.is-dragging {
-      .action-upload {
-        border-style: dashed;
-      }
-    }
-
-    .Previewer {
-      margin-top: 160px;
-    }
-  }
-
-  .StepFour {
-
-    .Previewer {
-      margin-top: 60px;
-      margin-bottom: 60px;
-    }
-
-    .inputs {
-      .card {
-        border: 0;
-        &-header {
-          background: transparent;
-          font-size: 1.2rem;
-          border-color: #95989A;
-        }
-      }
-      .row {
-        //margin-bottom: 0.5rem;
-        > div {
-          margin-bottom: 0.5rem;
-        }
-      }
-      .input-group-addon {
-        width: 3.1rem;
-        padding: 0 0.5rem;
+      .product {
         text-align: center;
-        font-size: 0.3rem;
-        border: 0;
-      }
+        line-height: 100%;
 
-      @each $name, $color in $product-colors {
-        .color-#{$name} {
-          .input-group-addon {
-            @if $name == transparent {
-              background: url(./assets/transparent.png) repeat !important;
-              background-size: 50%;
-            } @else {
-              background-color: $color;
+        &-box {
+          border: 2px solid #aaa;
+          width: 100%;
+          margin: 0 auto 0.6rem;
+        }
+
+        &-name {
+          font-size: 14px;
+          margin: 0 0 0.7rem;
+        }
+
+        &-desc {
+          font-size: 0.66rem;
+          line-height: 0.66rem;
+          color: #A2A2A2;
+          margin: 0 0 1rem;
+          white-space: nowrap;
+        }
+
+        &--s {
+          width: 20%;
+          .product-box {
+            //max-width: 59px;
+            height: 42px;
+          }
+        }
+        &--m {
+          width: 30%;
+          .product-box {
+            //max-width: 84px;
+            height: 59px;
+          }
+        }
+        &--l {
+          width: 50%;
+          .product-box {
+            //max-width: 169px;
+            height: 84px;
+          }
+        }
+
+        &--a5 {
+          width: 25%;
+          .product-box {
+            max-width: 68px;
+            height: 97px;
+          }
+        }
+
+        &--a4 {
+          width: 35%;
+          .product-box {
+            max-width: 97px;
+            height: 138px;
+          }
+        }
+
+        &--a3 {
+          width: 40%;
+          .product-box {
+            max-width: 138px;
+            height: 196px;
+          }
+        }
+
+        .custom-control-indicator {
+          background: #F8F8F8;
+          //border: 2px solid #868686;
+          box-shadow: 0 0 0 1px #fff, 0 0 0 3px #868686;
+        }
+
+        .was-validated .custom-control-input:invalid ~ .custom-control-indicator, .custom-control-input.is-invalid ~ .custom-control-indicator {
+          background-color: rgba(220, 53, 69, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 3px $red;
+        }
+
+        .form-group {
+          &.checked {
+            .product-box {
+              background: #CDF0C2;
+            }
+            input {
+              border-color: #CDF0C2;
+            }
+            .custom-control-indicator {
+              background: #CDF0C2;
+              box-shadow: 0 0 0 1px #fff, 0 0 0 3px #868686;
             }
           }
         }
-      }
 
+      }
     }
 
-    .products {
-      padding: 1.5rem 0;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      white-space: nowrap;
-      .card {
-        white-space: normal;
-        display: inline-block;
-        position: relative;
-        width: 30%;
-        min-width: 150px;
-        height: 135px;
-        margin: 0 3.33% 0 0;
-        border-radius: 0;
-        border-color: #95989A;
-        text-align: center;
-        .badge {
-          display: inline-block;
-          position: absolute;
-          top: -10px;
-          left: 25%;
-          width: 50%;
+    &-3 {
+      .item {
+        margin: 0 0 24px;
+        &-title {
+          margin: 0 0 7px;
+          font-weight: 500;
+          font-size: 1.1rem;
         }
-        .close {
-          transition: all 0.8s ease;
+        &-select-file {
+          .btn {
+            margin: 0 1rem 0 0;
+          }
+        }
+        &-file {
           font-weight: 300;
-          opacity: 1;
-          background: #fff;
-          position: absolute;
-          top: -0.75rem;
-          right: -0.75rem;
-          width: 1.55rem;
-          height: 1.55rem;
-          padding: 0;
-          border: 1px solid #E87070;
-          color: #E87070;
-          border-radius: 100%;
-          font-size: 1rem;
-          display: none;
-        }
-        &-img {
-          height: 100px;
-        }
-        &-text {
-          font-size: 0.8rem;
-        }
-        &:hover {
-          .close {
-            display: block;
+          .btn {
+            margin: 0 0 0 30px;
+            color: $blue;
           }
         }
       }
-      max-width: 9999px;
+      &.is-dragging {
+        .action-upload {
+          border-style: dashed;
+        }
+      }
 
       .Previewer {
-        transform: scale(0.28);
-        width: 100%;
-        height: 100%;
-        margin: -20px 0 -30px -40px;
-        padding: 0;
+        margin-top: 160px;
       }
     }
 
+    &-4 {
+
+      .Previewer {
+        margin-top: 60px;
+        margin-bottom: 60px;
+      }
+
+      .inputs {
+        .card {
+          border: 0;
+          &-header {
+            background: transparent;
+            font-size: 1.2rem;
+            border-color: #95989A;
+          }
+        }
+        .row {
+          //margin-bottom: 0.5rem;
+          > div {
+            margin-bottom: 0.5rem;
+          }
+        }
+        .input-group-addon {
+          width: 3.1rem;
+          padding: 0 0.5rem;
+          text-align: center;
+          font-size: 0.3rem;
+          border: 0;
+        }
+
+        @each $name, $color in $product-colors {
+          .color-#{$name} {
+            .input-group-addon {
+              @if $name == transparent {
+                background: url(./assets/transparent.gif) repeat !important;
+                background-size: 50%;
+              } @else {
+                background-color: $color;
+              }
+            }
+          }
+        }
+
+      }
+
+      .products {
+        padding: 1.5rem 0;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        white-space: nowrap;
+        .card {
+          white-space: normal;
+          display: inline-block;
+          position: relative;
+          width: 30%;
+          min-width: 150px;
+          height: 135px;
+          margin: 0 3.33% 0 0;
+          border-radius: 0;
+          border-color: #95989A;
+          text-align: center;
+          .badge {
+            display: inline-block;
+            position: absolute;
+            top: -10px;
+            left: 25%;
+            width: 50%;
+          }
+          .close {
+            transition: all 0.8s ease;
+            font-weight: 300;
+            opacity: 1;
+            background: #fff;
+            position: absolute;
+            top: -0.75rem;
+            right: -0.75rem;
+            width: 1.55rem;
+            height: 1.55rem;
+            padding: 0;
+            border: 1px solid #E87070;
+            color: #E87070;
+            border-radius: 100%;
+            font-size: 1rem;
+            display: none;
+          }
+          &-img {
+            height: 100px;
+          }
+          &-text {
+            font-size: 0.8rem;
+          }
+          &:hover {
+            .close {
+              display: block;
+            }
+          }
+        }
+        max-width: 9999px;
+
+        .Previewer {
+          transform: scale(0.28);
+          width: 100%;
+          height: 100%;
+          margin: -20px 0 -30px -40px;
+          padding: 0;
+
+          .size-m {
+
+          }
+        }
+      }
+
+    }
   }
+
 }
+
+// Adaptive styles
 
 @include media-breakpoint-up(lg) {
   .OrderForm {
