--- a/src/styles/_FirstScreen.scss
+++ b/src/styles/_FirstScreen.scss
@@ -4,7 +4,8 @@
   background-size: cover;
   position: absolute;
   width: 100%;
-  height: 100%;
+  //height: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
   z-index: 999;
