--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
-//$theme-colors: (
-//        "primary": #0074d9,
-//        "danger": #ff4136
-//);
+// Typography
+$font-family-sans-serif: "Helvetica Neue", Arial, sans-serif;
+$body-color: #5A5A5A;
+
+// Colors
 
 $classic-colors: (
         yellow: #eadb3f,
@@ -11,15 +12,22 @@ $classic-colors: (
         pink: #e391c4,
         violet: #9b4fa7,
         white: #f8f8f8,
+        //transparent: transparent,
         transparent: #eee,
 );
 $pastel-colors: (
-        aqua: #b0e2e2,
-        mint: #c2df87,
-        peachy: #ffbe9e,
-        pearl: #dac4e5,
-        spring: #ffb4aa,
-        sunshine: #f9df8d,
+        //aqua: #b0e2e2,
+        //mint: #c2df87,
+        //peachy: #ffbe9e,
+        //pearl: #dac4e5,
+        //spring: #ffb4aa,
+        //sunshine: #f9df8d,
+        aqua: #63d4da,
+        mint: #aad879,
+        peachy: #fc9d73,
+        pearl: #caa8d2,
+        spring: #fc8776,
+        sunshine: #fed671,
 );
 
 $product-colors: map-merge($classic-colors, $pastel-colors);
@@ -37,8 +45,12 @@ $theme-colors: map-merge((
         purple: #c34dee,
 ), $product-colors);
 
+// Links
+
 $link-decoration: underline;
 $link-hover-decoration: none;
+
+// Forms
 
 $input-btn-padding-y-lg: 0.9rem;
 $input-btn-padding-x-lg: 1.2rem;
