--- a/src/components/Previewer/_style.scss
+++ b/src/components/Previewer/_style.scss
@@ -6,6 +6,8 @@ $initial-deg: 26;
 $inner-color: #f9f9f9;
 $border-width: 0;
 
+$highlight-color: rgba(#f74561, 0.2);
+
 .Previewer {
   position: relative;
 
@@ -18,9 +20,25 @@ $border-width: 0;
 
     transition: all 0.8s ease;
 
-    ::before,
-    ::after {
-      content: "";
+    .highlight {
+      transition: all 0.3s ease;
+      background: repeating-linear-gradient(
+                      135deg,
+                      lighten($highlight-color, 20),
+                      lighten($highlight-color, 20) 10px,
+                      $highlight-color 10px,
+                      $highlight-color 20px
+      );
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 4px solid rgba(#fff, 0.6);
+      opacity:0;
+      &.active {
+        opacity: 1;
+      }
     }
 
     ul {
@@ -29,21 +47,16 @@ $border-width: 0;
       padding: 0;
     }
 
-    .cover, .cover > li, .page, .page > li, .highlight {
+    .cover, .cover > li, .page, .page > li {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       transform-style: preserve-3d;
-    }
-
-    .highlight {
-      transition: all 1s ease;
-      opacity: 0;
-      background: rgba(red, 0.2);
-      z-index: 100;
-      border: 4px dashed rgba(red, 0.6);
+      &:before, &:after {
+        content: "";
+      }
     }
 
     .cover > li, .page > li {
@@ -53,35 +66,45 @@ $border-width: 0;
     // Cover
 
     .cover {
-      transition: all 0.8s ease, z-index 0.3s;
+      transition: all 0.3s ease;
       transform-origin: 100% 0;
+
+      canvas {
+        //position: absolute;
+        //top: 0;
+        //left: 0;
+        //z-index: 90;
+        //z-index: 90;
+        //width: 100%;
+        //height: 100%;
+      }
 
       > li {
 
-        &:first-child:after, &:first-child:before, &:last-child:after, &:last-child:before {
-          background: red; //rgba(#fff, 1);
-          opacity: 0.6;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
+        //&:first-child:after, &:first-child:before, &:last-child:after, &:last-child:before {
+        //  background: red; //rgba(#fff, 1);
+        //  opacity: 0.6;
+        //  position: absolute;
+        //  top: 0;
+        //  left: 0;
+        //}
 
-        &:first-child:after, &:last-child:after {
-          //transform: translateY($height);
-        }
+        //&:first-child:after, &:last-child:after {
+        //  //transform: translateY($height);
+        //}
 
-        &:first-child:before, &:first-child:after {
-          height: 100%;
-          width: $border-width + px;
-        }
-        &:last-child:before, &:last-child:after {
-          width: 100%;
-          height: $border-width + px;
-        }
+        //&:first-child:before, &:first-child:after {
+        //  height: 100%;
+        //  width: $border-width + px;
+        //}
+        //&:last-child:before, &:last-child:after {
+        //  width: 100%;
+        //  height: $border-width + px;
+        //}
       }
 
       &.front {
-        transform: rotateX($initial-deg + 8 + deg) translateZ(0);
+        transform: rotateX($initial-deg + 8 + deg) translateZ(1px);
         z-index: 100;
         > li {
           &:first-child {
@@ -97,12 +120,12 @@ $border-width: 0;
               //transform: rotateY(90deg) translateZ(158px) translateX(2px);
             }
             &:after {
-              transform: translateX($width - 1);
+              //transform: translateX($width - 1);
               //transform: rotateY(-90deg) translateZ(-2px) translateX(2px);
             }
           }
           &:last-child {
-            transform: rotateY(180deg) translateZ(1px);
+            transform: rotateY(180deg) rotateZ(180deg) translateZ(1px);
             background: $inner-color;
             &:before {
               //display:none;
@@ -121,7 +144,7 @@ $border-width: 0;
           position: relative;
           width: 100%;
           height: 100%;
-          z-index:100;
+          z-index: 100;
         }
       }
 
@@ -132,18 +155,17 @@ $border-width: 0;
         li {
           &:first-child {
             background: $inner-color;
-            //transform: translateZ(1px);
+            transform: translateZ(1px);
             &:before {
-              //transform: translateY(1px);
               //transform: rotateY(90deg) translateZ(158px) translateX(2px);
             }
             &:after {
-              transform: translateX($width - 1) translateY(1px);
+              transform: translateX($width - 1);
               //transform: rotateY(90deg) translateZ(-2px) translateX(2px);
             }
           }
           &:last-child {
-            //transform: translateZ(1px);
+            transform: rotateY(180deg);
             &:before {
               //box-shadow: 10px -1px 80px 20px #666;
               //transform: rotateX(90deg) rotateZ(90deg) translateZ(-140px) translateX(2px) translateY(-78px);
@@ -170,11 +192,11 @@ $border-width: 0;
         transition-property: transform;
         transition-timing-function: ease;
 
-        background: linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+        background: linear-gradient(0, #e1ddd8 0%, #fffbf6 100%);
         box-shadow: inset 0px -1px 1px rgba(#555, 0.1), inset 0 40px 100px rgba(#666, 0.1);
         //border-radius: 0 5px 5px 0;
 
-        transition-duration: 0.6s;
+        transition-duration: 0.3s;
 
         $i: $pages-count;
         @while $i > 0 {
@@ -216,60 +238,49 @@ $border-width: 0;
       }
     }
 
-    // Sizes
-
-    &.size-s {
-      width: 210px !important;
-      height: 150px !important;
-    }
-
-    &.size-m {
-      width: 300px !important;
-      height: 210px !important;
-    }
-
-    // Animation
-
-    &.highlight-frontInner {
-      .cover.front {
-        li:first-child {
-          .highlight {
-            opacity: 1;
-          }
-        }
-      }
-    }
+    // ----------------------------------------
+    // Animations
+    // ----------------------------------------
 
     &.highlight-frontOuter {
+      transform: scale(1.1);
+      //.cover.front {
+      //  li:first-child {
+      //    .highlight {
+      //      background-color: $highlight-color;
+      //    }
+      //  }
+      //}
+    }
+
+    &.highlight-frontInner {
       transform: translateY(100px) scale(1.1);
       .cover.front {
-
         transform: rotateX(155deg);
-        z-index: 0;
-
-        li:last-child {
-          .highlight {
-            opacity: 1;
-          }
-        }
+        //z-index: 0;
+        //li:last-child {
+        //  .highlight {
+        //    background-color: $highlight-color;
+        //  }
+        //}
       }
     }
 
     &.highlight-backInner {
-      transform: translateY(100px) scale(1.1);
+      transform: translateY(0) scale(1.1);
       .cover.front {
 
         transform: rotateX(155deg);
         z-index: 0;
 
       }
-      .cover.back {
-        li:first-child {
-          .highlight {
-            opacity: 1;
-          }
-        }
-      }
+      //.cover.back {
+      //  li:first-child {
+      //    .highlight {
+      //      background-color: $highlight-color;
+      //    }
+      //  }
+      //}
       .page {
         li {
           $i: 0;
@@ -285,8 +296,10 @@ $border-width: 0;
     }
 
     &.highlight-backOuter {
-      transform: translateY(200px) scale(1.1);
-        //transform: translateY(100px);
+      //transform: rotateZ(180deg);
+
+      transform: rotateZ(180deg) translateY(120%) scale(1.1);
+      //transform: translateY(100px);
 
       .cover.front {
         transform: rotateX(155deg);
@@ -295,11 +308,11 @@ $border-width: 0;
 
       .cover.back {
         transform: rotateX(130deg);
-        li:last-child {
-          .highlight {
-            opacity: 1;
-          }
-        }
+        //li:last-child {
+        //  .highlight {
+        //    background-color: $highlight-color;
+        //  }
+        //}
         z-index: 10;
       }
 
@@ -318,30 +331,30 @@ $border-width: 0;
     }
 
     &:hover {
+
       transform: translateY(10px) scale(1);
       .cover.front {
         transform: rotateX(65deg) translateZ(0);
-        //z-index: 0;
       }
-      .page {
-        li {
-          $i: 0;
-          @while $i < $pages-count {
-            &:nth-child(#{$i}) {
-
-              $deg: $initial-deg + $i * 1.1;
-
-              //@if $i > 8 {
-              //  $deg: $initial-deg -5 + $i*2;
-              //}
-
-              transform: rotateX($deg+ deg);
-              //transition-duration: ($i * 0.6) + s;
-            }
-            $i: $i + 1;
-          }
-        }
-      }
+      //.page {
+      //  li {
+      //    $i: 0;
+      //    @while $i < $pages-count {
+      //      &:nth-child(#{$i}) {
+      //
+      //        $deg: $initial-deg + $i * 1.1;
+      //
+      //        //@if $i > 8 {
+      //        //  $deg: $initial-deg -5 + $i*2;
+      //        //}
+      //
+      //        transform: rotateX($deg+ deg);
+      //        //transition-duration: ($i * 0.6) + s;
+      //      }
+      //      $i: $i + 1;
+      //    }
+      //  }
+      //}
     }
 
   }
