--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,9 @@
+
+@include font-face('icomoon','./assets/fonts/icomoon');
+@include font-face('Avenir-Book','./assets/fonts/Avenir-Book');
+@include font-face('Helvetica Neue','./assets/fonts/HelveticaNeue');
+@include font-face('Helvetica Neue','./assets/fonts/HelveticaNeue-UltraLight', normal, 200);
+
 // Typography
 $font-family-sans-serif: "Helvetica Neue", Arial, sans-serif;
 $body-color: #5A5A5A;
@@ -35,7 +41,7 @@ $product-colors: map-merge($classic-colors, $pastel-colors);
 $theme-colors: map-merge((
         primary: #f74561,
         secondary: #747474,
-        success: #28a745,
+        success: #72B972,
         info: #17a2b8,
         warning: #ffc107,
         danger: #dc3545,
@@ -52,7 +58,7 @@ $link-hover-decoration: none;
 
 // Forms
 
-$input-btn-padding-y-lg: 0.9rem;
+$input-btn-padding-y-lg: 1.5rem;
 $input-btn-padding-x-lg: 1.2rem;
 
 $input-placeholder-color: #9D9D9D;
@@ -60,11 +66,13 @@ $input-border-color: #95989A;
 $input-btn-border-width: 2px;
 //$input-btn-line-height-lg: 2.5;
 
+$input-height-lg: 80px;
+
 $input-border-radius: 0;
 $input-border-radius-sm: 0;
 $input-border-radius-lg: 0;
 
-$btn-font-weight: 300;
+//$btn-font-weight: 300;
 $btn-border-radius: 0;
 $btn-border-radius-lg: 0;
 $btn-border-radius-sm: 0;
