--- a/src/components/FirstScreen/_style.scss
+++ b/src/components/FirstScreen/_style.scss
@@ -2,7 +2,7 @@
 .FirstScreen {
   background: url(./assets/bg.jpg) no-repeat center center;
   background-size: cover;
-  position: absolute;
+  position: fixed;
   width: 100%;
   //height: 100%;
   min-height: 100%;
@@ -37,11 +37,13 @@
   }
 
   .btn {
-    font-family: Helvetica, Arial;
+    font-family: Helvetica, Arial, serif;
     text-transform: uppercase;
     letter-spacing: 5px;
-    padding: 0 56px;
-    height: 93px;
     //width: 235px;
+    &-lg {
+      padding: 0 46px;
+      height: 83px;
+    }
   }
 }
