--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,4 +1,3 @@
-
 // Custom icons
 
 [class^="icon-"], [class*=" icon-"] {
@@ -16,8 +15,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-circle-down:before {
-  content: "\ea43";
+.icon-valid:before {
+  content: "\e900";
+}
+
+.icon-close:before {
+  content: "\e901";
 }
 
 // Other styles
